config/server/iptables.conf
*filter


# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0.
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT


# Allows all outbound traffic.
-A OUTPUT -j ACCEPT


# Accepts all established inbound connections.
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT


# Allow all inbound traffic on our whitelisted ports.
-A INPUT -p tcp --dport 80   -j ACCEPT
-A INPUT -p tcp --dport 443  -j ACCEPT
-A INPUT -p tcp --dport 8080 -j ACCEPT


# Allow SSH connections.
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT


# Allow ping.
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT


# Log iptables denied calls.
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7


# Reject all other inbound - default deny unless explicitly allowed policy.
-A INPUT -j REJECT
-A FORWARD -j REJECT


COMMIT
